--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Amor+Luz&family=Lujoso+Romano&family=Major+Mono+Display&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sedan+SC&display=swap');
 
+@keyframes gradientAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
 .sedan-sc-regular {
 	font-family: "Sedan SC", serif;
 }
 
+html {
+    scroll-behavior: smooth;
+	color: white;
+}
+
 #hero {
-	background-color: white;
+	background: linear-gradient(to bottom right, #080808d3, #fffdfd);
 	padding: 1px;
 }
 
 .hero_title{
 	text-decoration: overline underline;
-	text-shadow: 10px 10px 20px rgb(0, 0, 0);
 	position: relative;
 	transition: box-shadow 0.9s ease, transform 0.5s ease;
     transform: scale(1);
@@ -23,16 +33,75 @@
 	transform: scale(1.1) translateZ(20px);
 }
 
-
 h1 {
 	display: flex;
 	justify-content: center;
+
+	font-family: 'Alegreya SC', serif;
+	transition: transform 0.5s ease, text-shadow 0.5s ease;
+	
+}
+
+#hero img {
+	width: 50px;
+	margin-bottom: 10px;
+}
+
+h1 span {
+	display: inline-block;
+	transition: transform 0.5s ease, text-shadow 0.2s ease;
+}
+
+h1 span:hover {
+	transform: scale(1.2) rotate(25deg);
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+}
+
+.social-icons img {
+    color: white;
+    margin: 0 10px;
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.social-icons img:hover {
+	border: 2px solid black;
+	border-radius: 15px;
+	box-shadow: 0 0 25px rgb(255, 255, 255), 0 0 15px rgb(255, 255, 255) inset;;
+	transform: scale(1.1) translateZ(20px);
+}
+
+
+.color1:hover {
+    text-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.6), 0 0 30px rgba(255, 0, 0, 0.4);
+}
+
+.color2:hover {
+    text-shadow: 0 0 10px rgba(0, 255, 0, 0.8), 0 0 20px rgba(0, 255, 0, 0.6), 0 0 30px rgba(0, 255, 0, 0.4);
+}
+
+.color3:hover {
+    text-shadow: 0 0 10px rgb(0, 0, 255), 0 0 20px rgba(0, 0, 255, 0.6), 0 0 30px rgb(0, 0, 255);
+}
+
+.color4:hover {
+    text-shadow: 0 0 10px rgba(255, 255, 0, 0.8), 0 0 20px rgba(255, 255, 0, 0.6), 0 0 30px rgba(255, 255, 0, 0.4);
+}
+
+.color5:hover {
+    text-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.6), 0 0 30px rgba(0, 255, 255, 0.4);
 }
 
 body {
 	background-color: rgb(0, 0, 0);
 	height: 100%;
 	margin: 0;
+	background: repeating-linear-gradient(100deg,#3b3b3b, #000000f5);
+    background-size: 400% 400%;
+    animation: gradientAnimation 15s ease infinite;
 }
 
 #container {
@@ -51,16 +120,21 @@ body {
     background-color: white;
     text-align: center;
     position: relative;
+	opacity: 0;
     top: 50px;
     margin-bottom: 40px;
-    transition: box-shadow 0.5s ease, transform 0.5s ease;
+    transition: box-shadow 0.5s ease, transform 0.5s ease, opacity 6s ease;
     transform: scale(1);
     cursor: pointer;
+	background: linear-gradient(to bottom right, #070707, #8b8989fb);
 }
 
+.section.appear {
+    opacity: 1.9;
+}
 
 .section:hover {
-	box-shadow: 0 0 25px rgb(255, 255, 255);
+	box-shadow: 0 0 25px rgb(255, 255, 255), 0 0 15px rgb(255, 255, 255) inset;;
 	transform: scale(1.1) translateZ(20px);
 }
 
@@ -70,7 +144,7 @@ body {
 }
 
 .section_title {
-	background-color: rgb(255, 255, 255);
+	background: linear-gradient(to bottom right, #666666, #bdbcbc);
 	display: flex;
 	justify-content: space-between;
 }
@@ -81,13 +155,42 @@ body {
 }
 
 .date {
-	color: rgb(172, 172, 172);
-	font-size: 18px;
+	color: rgb(59, 59, 59);
+	font-size: 14px;
 	margin: 5px;
 }
 
 footer {
-	background-color: white;
+	background: linear-gradient(to bottom right, #070707, #ffffff);
 	text-align: start;
 	font-size: 16px;
+	padding: 1px;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    border-radius: 10px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 105%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.6s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
